# pandera_etl

./: README.md  contrato.py  etl.py  inferred_schema.py  pyproject.toml
data/: cotacoes.xls
